--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,8 @@
         "@babel/preset-env",
         "@babel/preset-react",
         "@babel/typescript"
+    ],
+    "plugins": [
+        ["@babel/transform-runtime"]
     ]
 }
