--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "start npm run backend && npm run dev  ",
-    "dev": "webpack serve --mode development --env development",
-    "backend": "json-server initialState.json",
+    "start": "webpack serve --mode development --env development",
     "build": "webpack --mode production"
   },
   "repository": {
@@ -48,11 +46,14 @@
     "@babel/runtime": "^7.12.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
-    "react-router-dom": "^5.2.0"
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5"
   }
 }
